[package]
name = "cosmos-sdk-proto"
version = "0.27.1"
authors = [
    "Justin Kilpatrick <justin@althea.net>",
    "Greg Szabo <greg@informal.systems>",
    "Tony Arcieri <tony@iqlusion.io>"
]
license = "Apache-2.0"
repository = "https://github.com/cosmos/cosmos-rust/tree/main/cosmos-sdk-proto"
description = "Protobuf stuct defintions for interacting Cosmos SDK powered blockchains"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto"]
edition = "2021"
rust-version = "1.88"

[dependencies]
prost = { version = "0.14.1", default-features = false }
prost-types = "0.14.1"
tendermint-proto = { version = "0.40.5", git="https://github.com/PFC-developer/tendermint-rs.git", branch = "prost-14.1" }
#path="../../tendermint-rs/proto" }

# Optional dependencies
tonic = { version = "0.14.1", optional = true, default-features = false, features = ["codegen"] }
tonic-prost = "0.14.1"
tonic-prost-build = "0.14.1"
serde = { version = "1.0.219", optional = true, default-features = false, features = ["alloc"] }
pbjson = { package = "informalsystems-pbjson", optional = true, default-features = false, version = "0.7" }

[features]
default = ["grpc-transport"]
std = ["prost/std", "tendermint-proto/std"]
grpc = ["std", "tonic"]
grpc-transport = ["grpc", "tonic/transport"]
cosmwasm = []
serde = ["dep:serde", "pbjson"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
